syntax = "proto3";

package protobuff;

option go_package = "github.com/whattheearl/fig/pkg/postpb";

message PostIdRequest {
  string  id = 1;
}

message CreatePostRequest {
  string  id = 1;
  string  message = 2;
  string  image = 3;
  string  authorid = 4;
}

message QueryRequest {
  string  profileId = 1;
  string  cursor = 2;
  int32  count = 3;
}

message Result {
  string  id = 1;
  string  message = 2;
  string  image = 3;
  string  authorid = 4;
}

message PostResponse {
  repeated Result result = 1;
  string cursor = 2;
  int32 count = 3;
}

message EmptyPost { }

service PostService {
  rpc Create(CreatePostRequest) returns (PostResponse);
  rpc Query(QueryRequest) returns (PostResponse);
  rpc GetById(PostIdRequest) returns (PostResponse);
  rpc UpdateById(PostIdRequest) returns (PostResponse);
  rpc RemoveById(PostIdRequest) returns (EmptyPost);
}